# homebrew

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yml  docker-compose.override.yml  docker-compose.yml  index.html  package-lock.json  package.json  rocket.toml  sqlx-data.json  tailwind.config.js  vite.config.js  vue.config.js
homebrew/: .gitignore  Cargo.toml  Makefile
homebrew-ui/: .gitignore  Dockerfile  Makefile  dev.Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vue.config.js
homebrew-ui/src/: app.vue  debounced.ts  logging.ts  main.ts  routes.ts
homebrew-ui/src/components/: batch-gravity-readings.vue  batch-hops-table.vue  batch-targets.vue  batch-water-table.vue  batch.vue  batches.vue  confirm-delete.vue  grid.vue  input-abv.vue  input-gravity.vue  input-volume.vue  note.vue  search-select.vue
homebrew-ui/src/store/: batch.ts  batchIngredient.ts  beer.ts  fermentables.ts  note.ts  request.ts
homebrew-ui/src/types/: fermentable.ts
homebrew-ui/src/views/: fermentables.vue  home.vue
homebrew-web/: Cargo.toml  Dockerfile  Makefile  dev.Dockerfile  sqlx-data.json
homebrew-web/migrations/: 20200929003456_create_base_tables.sql  20201012165244_add_batch_fermentable.sql  20210611133433_Add_batch_notes.sql  20211027192446_add_batch_gravity_reading_table.sql
homebrew-web/src/: error.rs  main.rs  telemetry.rs
homebrew-web/src/repos/: batch.rs  fermentable.rs  mod.rs
homebrew-web/src/repos/batch/: fermentable.rs  note.rs
homebrew-web/src/routes/: batch.rs  beer.rs
homebrew-web/src/routes/batch/: fermentable.rs  note.rs
homebrew-web/src/routes/measurement/: abv.rs  srm.rs
homebrew/src/: abv.rs  lib.rs  srm.rs
homebrew/src/abv/: brix.rs  density.rs  gravity.rs
migrations/: 20200929003456_create_base_tables.sql  20201009122635_add_fermentables.sql  20201012165244_add_batch_fermentable.sql
migrations/2020-09-17-125140_create_brew_table/: down.sql  up.sql
public/: index.html
src/: main.ts
src/client/: app.vue  main.ts
src/client/components/: abvInput.vue  batch-fermentable-row.vue  batch-fermentable-table.vue  batch-ingredients.vue  batch-targets.vue  batch.vue  batches.vue  beer-info.vue  beer-targets.vue  brew-log.vue  gravityInput.vue  grid.vue  input-abv.vue  input-gravity.vue  input-volume.vue  search-select.vue
src/client/router/: index.ts
src/client/scss/: custom.scss
src/client/store/: batch.ts  batchIngredient.ts  beer.ts  brews.ts  fermentables.ts  index.ts  request.ts
src/client/views/: beer.vue  brew-log.vue  fermentables.vue  home.vue
src/lib/: lib.rs  srm.rs
src/server/: config.rs  error.rs  main.rs  schema.rs
src/server/repos/: batch.rs  batch_fermentable.rs  fermentable.rs  mod.rs
src/server/routes/: batch.rs  beer.rs  brew.rs  fermentable.rs  mod.rs  srm.rs
src/server/routes/batch/: fermentable.rs  (+1 more)
