[package]
name = "homebrew"
version = "0.1.0"
authors = ["Dan Cardin <ddcardin@gmail.com>"]
edition = "2018"

[lib]
name = "homebrew"
path = "src/lib/lib.rs"

[[bin]]
name = "homebrew-server"
path = "src/server/main.rs"

[dependencies]
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
maplit = "*"
log = "*"
chrono = { version = "*", features = ["serde"] }
actix-web = "3.0.2"
actix-rt = "1.1.1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.10.1"
json = "0.12.4"
derive_more = "0.99.10"
anyhow = "1.0.32"
listenfd = "0.3.3"
env_logger = "0.7.1"
