[package]
name = "homebrew"
version = "0.1.0"
authors = ["Dan Cardin <ddcardin@gmail.com>"]
edition = "2018"

[lib]
name = "homebrew"
path = "src/lib/lib.rs"

[[bin]]
name = "homebrew-server"
path = "src/server/main.rs"

[dependencies]
actix-multipart = "0.3.0"
actix-web = "3.0.2"
anyhow = "1.0.32"
bigdecimal = { version = "0.2.0", features = ['serde'] }
chrono = { version = "*", features = ["serde"] }
config = "0.10.1"
csv = "1.1.3"
derive_more = "0.99.10"
futures = "0.3.6"
json = "0.12.4"
listenfd = "0.3.3"
maplit = "1.0.2"
num-traits = "0.2.12"
once_cell = "1.4.1"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.58"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["bigdecimal", "chrono", "macros", "migrate", "offline", "postgres", "runtime-tokio", "uuid"] }
tracing = "0.1.21"
tracing-actix-web = "0.2"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt", "json"] }
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "0.5.6"
